--- a/src/main/resources/static/partials/users_list.html
+++ b/src/main/resources/static/partials/users_list.html
@@ -3,7 +3,7 @@
         <button type="button" class="btn btn-success" ng-click="addUser()">Add user</button>
     </div>
 </div>
-<table class="table table-bordered table-striped ">
+<table class="table table-bordered table-striped " style="margin-top: 1em;">
     <tr ng-repeat="user in users">
         <td>
             {{user.fullName}}
