--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,60 +1,66 @@
 body {
-    padding: 1em;
+  padding: 1em;
+  background-color: #f0f0f0;
 }
-
 .exceptionGroup {
-    background-color: #b9def0;
-    padding: 5px;
-    margin-bottom: 10px;
-    border: 1px solid cornflowerblue;
-    border-radius: 3px;
+  background-color: #f2f6fc;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #6ba6e1;
+  border-radius: 5px;
+  cursor: pointer;
 }
-
 .exceptionGroup .name {
-    font-weight: bold;
+  font-weight: bold;
 }
-
 .exceptionGroup .count {
-    display: inline-block;
-    float: right;
+  float: right;
+  text-align: right;
+  font-size: x-large;
 }
-
+.exceptionGroup .time {
+  float: right;
+}
+.exceptionGroup:hover {
+  border-color: black;
+}
 .exceptionGroupFull {
-    background-color: #b9def0;
-    padding: 5px;
-    border: 1px solid cornflowerblue;
+  background-color: #f2f6fc;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #6ba6e1;
 }
-
+.exceptionGroupFull .exceptionGroupFull .field {
+  font-weight: bold;
+}
 .name {
-    font-size: larger;
-    font-weight: bold;
+  font-size: larger;
+  font-weight: bold;
 }
-
-.exceptionGroupFull .field {
-    font-weight: bold;
-}
-
 .field_container {
-    margin-top: 10px;
+  margin-top: 10px;
 }
-
-
-
+.field_container .field {
+  font-weight: bold;
+}
 .exceptionGroupStackTrace {
-    margin-top: 20px;
-    background: #b9def0;
-    padding: 5px;
-    border: 1px solid cornflowerblue;
+  border-radius: 5px;
+  margin-top: 20px;
+  background: #f2f6fc;
+  padding: 5px;
+  border: 1px solid #6ba6e1;
 }
-
 .projectListItem {
-    margin-top: 20px;
-    background: #b9def0;
-    padding: 5px;
-    border: 1px solid cornflowerblue;
-
+  margin-top: 20px;
+  background: #f2f6fc;
+  padding: 5px;
+  border: 1px solid #6ba6e1;
+  border-radius: 5px;
+  cursor: pointer;
 }
-
 .projectListItem .name {
-    font-weight: bold;
+  font-weight: bold;
+}
+.projectListItem:hover {
+  border-color: black;
 }
