--- a/src/main/resources/static/partials/exception_list.html
+++ b/src/main/resources/static/partials/exception_list.html
@@ -1,4 +1,6 @@
 <div class="row">
+    <div style="margin-bottom: 1em;" class="queryBox"></div>
+
     <div ng-repeat="exceptionGroup in exceptionGroups" class="exceptionGroup" ng-click="showException(exceptionGroup)">
         <div class="name">{{exceptionGroup.message}}</div>
 
