--- a/src/main/resources/static/partials/users_create.html
+++ b/src/main/resources/static/partials/users_create.html
@@ -4,6 +4,10 @@
         <input type="text" class="form-control" name="fullName" id="fullName" ng-model="user.fullName"/>
     </div>
     <div class="form-group">
+        <label for="shortName">Short name</label>
+        <input type="text" class="form-group" id="shortName" name="shortName" ng-model="user.shortName"/>
+    </div>
+    <div class="form-group">
         <label for="email">E-mail</label>
         <input type="email" class="form-control" name="email" id="email" ng-model="user.email"/>
     </div>
