start on pagination of exception groups

--- a/src/main/resources/static/partials/exception_list.html
+++ b/src/main/resources/static/partials/exception_list.html
@@ -17,3 +17,7 @@
         <div class="clearfix"></div>
     </div>
 </div>
+<div class="row">
+    <pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" items-per-page="itemsPerPage" class="pagination-sm" boundary-links="true" ng-change="pageChanged()"></pagination>
+
+</div>
