--- a/src/main/resources/static/partials/users_create.html
+++ b/src/main/resources/static/partials/users_create.html
@@ -5,7 +5,7 @@
     </div>
     <div class="form-group">
         <label for="shortName">Short name</label>
-        <input type="text" class="form-group" id="shortName" name="shortName" ng-model="user.shortName"/>
+        <input type="text" class="form-control" id="shortName" name="shortName" ng-model="user.shortName"/>
     </div>
     <div class="form-group">
         <label for="email">E-mail</label>
