--- a/src/main/resources/static/partials/settings/settings.html
+++ b/src/main/resources/static/partials/settings/settings.html
@@ -13,5 +13,10 @@
         <label for="mail.password">Password</label>
         <input class="form-control" type="text" name="mail.password" id="mail.password" ng-model="settings.password"/>
     </div>
+    <div class="form-group">
+        <label for="port">Port</label>
+        <input type="text" class="form-control" id="port" name="port" ng-model="settings.port"/>
+    </div>
+
 </form>
 <button type="button" class="btn btn-default" ng-click="saveSettings()">Save</button>
