remove code button when no code available

--- a/src/main/resources/static/partials/exception_show.html
+++ b/src/main/resources/static/partials/exception_show.html
@@ -37,7 +37,7 @@
     <div class="btn-group">
 
         <button class="btn btn-default" ng-click="showIndividualLogs()">Individual logs</button>
-        <button class="btn btn-default" ng-click="showCode()">Show code</button>
+        <button class="btn btn-default" ng-click="showCode()" ng-show="exceptionGroup.hasCode">Show code</button>
     </div>
 </div>
 
