--- a/src/main/resources/static/partials/exception_logs.html
+++ b/src/main/resources/static/partials/exception_logs.html
@@ -26,7 +26,7 @@
     </thead>
     <tbody>
     <tr ng-repeat="logEvent in log.context">
-        <td>{{logEvent.timestamp}}</td>
+        <td >{{logEvent.timestamp  | amDateFormat:'YYYY-MM-DD HH:mm:ss.SSS'}}</td>
         <td>{{logEvent.level}}</td>
         <td>{{logEvent.message}}</td>
     </tr>
